feat: add PackageLocation
